module.exports = class ApplicationException extends Error {};
