const ApplicationException = require("../../ApplicationException/ApplicationException.js");
module.exports = class CartException extends ApplicationException {};
