const CartItemException = require("./CartItemException.js");
module.exports = class InvalidPriceException extends CartItemException {};
